[package]
name = "uncomment"
authors = ["Bernard Cooke <bernard-cooke@hotmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
pretty_assertions = "1.4.0"
